--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
 *.docx
 *.ipynb
+*.~*
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
